# vedio-duration-gs-

./: CMakeLists.txt  README.MD  nautilus-video-duration.c  vd-ffmpeg-helper.c
